sidebar: Avoid double borders
The frame should only have top and bottom borders, not left and right
ones.

--- a/data/gnome-maps.css
+++ b/data/gnome-maps.css
@@ -47,6 +47,10 @@
     border-right: 1px solid @borders;
 }
 
+#sidebar grid.frame {
+  border-width: 1px 0;
+}
+
 #instruction-list {
     border-right: 0px;
     border-left: 0px;
